<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">ACrypto</string>
    <string name="app_ver">Another crypto tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_view">View Details</string>
    <string name="action_more" translatable="false">View More</string>
    <string name="loading">Loading…</string>

    <string name="time_just_now">just now</string>
    <!-- Phrase describing a time duration using seconds [CHAR LIMIT=16] -->
    <plurals name="duration_seconds">
        <item quantity="one">1 second</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> seconds</item>
    </plurals>
    <!-- Phrase describing a time duration using minutes [CHAR LIMIT=16] -->
    <plurals name="duration_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <!-- Phrase describing a time duration using hours [CHAR LIMIT=16] -->
    <plurals name="duration_hours">
        <item quantity="one">1 hour</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>

    <string name="made_with_love">Made with Love</string>
    <string name="feedback_app_title">Enjoying ACrypto?</string>
    <string name="feedaback_app_message">Rate the app in Play Store or send us the feedback. Spread the love!</string>
    <string name="artbitrage_message"><![CDATA[ Buy <b>%1$s</b> for a price of ~<b>%2$s</b> <br/>
    Sell it for a price of ~<b>%3$s</b> <br/> Get a %4$s  of ]]></string>

    <string name="pref_title_build_version">Build version</string>
    <string name="pref_sync_title">Sync Data</string>
    <string name="pref_sync_description">Sync latest cryptocurrencies</string>
    <string name="pref_title_logout">Logout</string>
    <string name="pref_currency_title">Native Currency</string>
    <string name="pref_currency_description">your currency</string>
    <string name="default_currency">USD</string>

    <string name="error_google_sign_in">Can\'t sign in using Google</string>
    <string name="error_amazon_sign_in">Can\'t sign in using Amazon</string>
    <string name="tab_text_1">Info</string>
    <string name="tab_text_2">Exchanges</string>
    <string name="tab_text_3">Charts</string>
    <string name="redeem">Redeem</string>
    <string name="redeem_message">Redeem Code</string>
    <string name="cancel">Cancel</string>

    <string name="subscribe_title">Subscribe to ACrypto</string>
    <string name="subscribe_description">
        Support our app and subscribe to ACrypto PRO.\n\n
        As part of PRO subscription you will get these features:\n
        * Advanced Charts\n
        * See Arbitrage\n
        * Get Price Alerts\n
        * Get Arbitrage Alerts\n
        * Maintain Portfolio\n
        * No Advertisements\n
    </string>

    <string name="invitation_title">Share ACrypto</string>
    <string name="invitation_message">Track all your cryptocurrencies, get real time alerts and manage your portfolio. Give it a try!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://developers.google.com/identity/images/g-logo.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="licenses">Licenses</string>
    <string name="guest">Guest</string>
    <string name="signin_to_acrypto">SignIn to Acrypto</string>
    <string name="home">Home</string>
    <string name="coins">Coins</string>
    <string name="news">News</string>
    <string name="arbitrage">Arbitrage</string>
    <string name="alerts">Alerts</string>
    <string name="charts">Charts</string>
    <string name="portfolio">Portfolio</string>
    <string name="subscription">Subscription</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="empty_percent">0%</string>
    <string name="edit_portfolio">Edit Portfolio</string>
    <string name="add_portfolio">Add Portfolio</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="send_feedback">Send feedback</string>
    <string name="rate_app">Rate App</string>
    <string name="vol_24h">Vol.24H:</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="notes">Notes</string>
    <string name="acquisition_cost">Acquisition Cost</string>
    <string name="holdings">Holdings</string>
    <string name="coin">Coin</string>
    <string name="profit_loss">Profit/Loss</string>
    <string name="profit_loss_24h">24H Profit/Loss</string>
    <string name="current_bought_price">Current / Bought Price</string>
    <string name="current_value">Current Value</string>
    <string name="portfolio_warning">* The selected currency will be the default currency of this portfolio</string>
    <string name="market_cap">Market Cap.</string>
    <string name="open_price_24h">Open Price 24H</string>
    <string name="volume_24h">Volume 24H</string>
    <string name="price_24h">Price 24H</string>
    <string name="description">Description</string>
    <string name="portfolio_name">Portfolio Name</string>
    <string name="timeseries_10m">10M</string>
    <string name="timeseries_1h">1H</string>
    <string name="timeseries_1d">1D</string>
    <string name="timeseries_1w">1W</string>
    <string name="timeseries_30d">30D</string>
    <string name="timeseries_1y">1Y</string>
    <string name="timeseries_5y">5Y</string>
    <string name="percentage">Percentage</string>
    <string name="dollar_symbol">$</string>
    <string name="follow_us_on_twitter">Follow us on Twitter</string>
    <string name="join_google_plus_community">Join Google Plus Community</string>
    <string name="why_isn_t_acrypto_free">Why isn\'t ACrypto Free?</string>
    <string name="version">Version</string>
    <string name="credits">Credits</string>
    <string name="powered_by_cryptocompare">Powered by CryptoCompare</string>
    <string name="feedback_description">Feed us back your comments / suggestions</string>
    <string name="feedback">Feedback</string>
    <string name="spread_the_word">Spread the word!</string>
    <string name="share">Share</string>
    <string name="rating_descripion">If you like ACrypto, leave a positive rating on Play Store</string>
    <string name="rate">Rate</string>
    <string name="support">Support</string>
    <string name="default_notification_channel_id" translatable="false">info_channel</string>
    <string name="default_notification_channel_name" translatable="true">Info</string>
    <string name="sell_portfolio">Sell Portfolio</string>
    <string name="holdings_acquisition">Holdings / Acquisition</string>
    <string name="realized_pl">Realized P/L</string>
    <string name="currency">Currency</string>
    <string name="action_sort">sort</string>

    <string name="sort_default">Default</string>
    <string name="sort_price">Price</string>
    <string name="sort_volume_change">Volume Change</string>
    <string name="sort_price_change">Price Change</string>

    <string name="pref_theme_style_title">Theme Style</string>
    <string name="pref_theme_style_description">The style of theme</string>
    <string name="menu_search">Search</string>

</resources>
