<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_coins"
            android:icon="@drawable/ic_menu_coins"
            android:title="@string/coins" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/ic_charts"
            android:title="@string/charts" />
        <item
            android:id="@+id/nav_arbitrage"
            android:icon="@drawable/ic_arbitrage"
            android:title="@string/arbitrage" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_alerts"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_portfolio"
            android:title="@string/portfolio" />
        <item
            android:id="@+id/nav_subscription"
            android:icon="@drawable/ic_subscription"
            android:title="@string/subscription" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="Settings" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="Feed us back" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="About us" />
    </group>

</menu>
