<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="account"
        android:title="Account">
        <ListPreference
            android:key="user_currency"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/pref_currency_title" />
        <Preference
            android:key="logout"
            android:title="@string/pref_title_logout" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="notifications"
        android:title="Notifications">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="newsAlertStatus"
            android:persistent="true"
            android:title="Get notified of the latest news" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="about"
        android:title="About">
        <Preference
            android:key="build_version"
            android:title="@string/pref_title_build_version" />
    </PreferenceCategory>
</PreferenceScreen>
