<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_charts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <dev.dworks.apps.acrypto.view.SearchableSpinner
            android:id="@+id/currencyFromSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:theme="@style/SpinnerStyle"
            app:titleText="Choose a Coin" />

        <dev.dworks.apps.acrypto.view.SearchableSpinner
            android:id="@+id/currencyToSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:theme="@style/SpinnerStyle"
            app:titleText="Choose a Currency" />

        <dev.dworks.apps.acrypto.view.SearchableSpinner
            android:id="@+id/exchangeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxLines="1"
            android:minWidth="130dp"
            android:theme="@style/SpinnerStyle"
            app:titleText="Choose an Exchange" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_dark" />

        <RadioGroup
            android:id="@+id/timeseries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/timeseries_hour"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeseries_1h"
                android:textColor="@color/time_series_color" />

            <RadioButton
                android:id="@+id/timeseries_day"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/timeseries_1d"
                android:textColor="@color/time_series_color" />

            <RadioButton
                android:id="@+id/timeseries_week"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeseries_1w"
                android:textColor="@color/time_series_color" />

            <RadioButton
                android:id="@+id/timeseries_month"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeseries_30d"
                android:textColor="@color/time_series_color" />

            <RadioButton
                android:id="@+id/timeseries_year"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeseries_1y"
                android:textColor="@color/time_series_color" />

            <RadioButton
                android:id="@+id/timeseries_year5"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeseries_5y"
                android:visibility="gone"
                android:textColor="@color/time_series_color" />

        </RadioGroup>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_dark" />
    </LinearLayout>
</LinearLayout>