<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/controls_arbitrage_chart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_dark" />

                <RadioGroup
                    android:id="@+id/timeseries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/timeseries_minute"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timeseries_10m"
                        android:textColor="@color/time_series_color" />


                    <RadioButton
                        android:id="@+id/timeseries_hour"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timeseries_1h"
                        android:textColor="@color/time_series_color" />

                    <RadioButton
                        android:id="@+id/timeseries_day"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/timeseries_1d"
                        android:textColor="@color/time_series_color" />

                    <RadioButton
                        android:id="@+id/timeseries_week"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timeseries_1w"
                        android:textColor="@color/time_series_color" />

                    <RadioButton
                        android:id="@+id/timeseries_month"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timeseries_30d"
                        android:textColor="@color/time_series_color" />

                    <RadioButton
                        android:id="@+id/timeseries_year"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timeseries_1y"
                        android:textColor="@color/time_series_color" />

                </RadioGroup>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_dark" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <dev.dworks.apps.acrypto.view.LineChart
                        android:id="@+id/linechart"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_chart_height" />

                </LinearLayout>

                <dev.dworks.apps.acrypto.view.MaterialProgressBar
                    android:id="@+id/chartprogress"
                    style="@style/MaterialProgress"
                    android:layout_gravity="center"
                    android:visibility="gone" />
            </FrameLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/arbitrage_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:background="@drawable/circular_background_amber"
                            android:contentDescription="@null"
                            android:padding="30dp"
                            app:srcCompat="@drawable/ic_bug" />

                        <TextView
                            android:id="@+id/icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/dollar_symbol"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </FrameLayout>

                    <TextView
                        android:id="@android:id/summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:ellipsize="end"
                        android:paddingStart="10dp"
                        android:text="@string/artbitrage_message"
                        android:textAlignment="viewStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/lastupdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|end"
                android:layout_margin="10dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone"
                tools:text="5/3/17 2:45 PM" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
